Package: R.rsp
==============

Version: 0.15.1 [2014-03-24]
o WORKAROUND: On Windows, due to limitations in browseURL(..., browser=NULL),
  which in turn utilizes shell.exec(), view() for RspFileProduct failed to
  open files in subdirectories, because they had forward slashes in their
  pathname, e.g. reports/main.html.  By temporarily changing the working
  directory to that of the file, view() now opens the file properly.


Version: 0.15.0 [2014-02-25]
o ROBUSTNESS: Now the package runs the garbage collector if unloaded
  in order to make sure finalize() is called on any deleted HttpDaemon
  objects.
o Bumped up package dependencies.


Version: 0.14.1 [2014-02-07]
o Now print() for RspFileProduct reports file sizes also in kB, MB, etc.


Version: 0.14.0 [2014-02-04]
o SPEEDUP: Significant speed up of methods such as rstring() and
  rfile() for RSP expression that outputted a large amount of text
  to the output document.  Internally, this was achieved by replacing
  the default capturing of output, which uses text connections, with
  one that uses raw connections instead.  The processing time for the
  former was exponential in the number of captured lines whereas for
  the latter it is linear.


Version: 0.13.0 [2014-01-27]
o It's possible to call rcat(), rfile() etc from the command line
  with arguments, e.g. Rscript -e R.rsp::rfile LoremIpsum.md.rsp
  and Rscript -e R.rsp::rcat "Random number: <%=sample(1)%>".
  Also, by setting 'alias rcat=Rscript -e R.rsp::rcat' etc one
  can then just call 'rcat "Random number: <%=sample(1)%>"'.


Version: 0.12.9 [2014-01-26]
o CLEANUP: Internal calls to R.oo::ll() used really only by verbose
  statements trigger the attachment of the R.oo package (as of
  R.oo (>= 1.17.0)), which in turn outputs a few package startup
  messages.  Thus calling, say, R.rsp::rcat() would output such
  messages (which would be surprising to the user).  To lower this
  impact, ll() is only called when verbose is enabled.

