@@ -55,7 +55,7 @@
 \section{How to cite this package}{
  Bengtsson H (2014).
 \emph{R.rsp: Dynamic generation of scientific reports}.
-R package version 0.14.1.
+R package version 0.15.1.
 }
 
 \author{Henrik Bengtsson}
